improved landing page and added proper links

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="font-family: 'Roboto';">
+<html lang="en" style="font-family: 'Roboto'; scroll-behavior: smooth;">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
